# Procedural-programming-application

./: LICENSE.txt  README.md  pyproject.toml  start.cmd
data/cards_dir/: start_catalogue.json
data/code_dir/input_print/: solution.txt  task.json
data/theory_tests_dir/1. Введение в процедурное программирование/1.1. Что такое процедурное программирование/: test.json  theory.txt
data/theory_tests_dir/1. Введение в процедурное программирование/1.2. Чтение и вывод данных/: test.json  theory.txt
data/theory_tests_dir/1. Введение в процедурное программирование/1.3. Основные типы данных/: test.json  theory.txt
src/application/: __init__.py  cards.py  coding.py  main.py  menu.py  mk_scrollable_frame.py  test.py  theory.py
