[project]
name = "application"
version = "0.2.0"
description = "Procedural programming application"
readme = "README.md"
authors = [
    { name = "skeletonus(Konstantin)", email = "k0nstantinsergunin@yandex.ru" }
]
requires-python = ">=3.13"
dependencies = [
    "pytest>=9.0.2",
]

[project.scripts]
application = "application:main"

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"
